# crypto-pattern-analysis

./: .gitignore  DESCRIPTION  Dockerfile  Makefile  PROJECT_STRUCTURE.md  README.md  README_R.md  backtest_demo.py  demo.R  demo.py  docker-compose.yml  install_dependencies.R  manage.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  setup.py  test_run.R
R/: candlestick_patterns.R  clustering.R  data_collector.R  hmm_model.R  main.R  technical_indicators.R
config/: settings.py
notebooks/: crypto_analysis_demo.ipynb
src/: __init__.py  main.py
src/api/: app.py
src/data/: __init__.py  data_collector.py  database.py
src/features/: __init__.py  technical_indicators.py
src/models/: __init__.py  backtester.py  clustering.py  hmm_model.py  model_registry.py
src/patterns/: __init__.py  candlestick_patterns.py
src/utils/: error_handling.py  logging_config.py
src/visualization/: __init__.py
tests/: README.md  __init__.py  conftest.py  test_basic.py
tests/unit/: test_data_collector.py  test_technical_indicators.py
