[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crypto-trading-analysis"
version = "1.0.0"
description = "Comprehensive cryptocurrency trading analysis platform with advanced data collection, machine learning models, and REST API"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Emma", email = "emma@crypto-pattern-analysis.com"}
]
keywords = ["cryptocurrency", "trading", "analysis", "machine learning", "technical analysis", "pattern recognition"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
requires-python = ">=3.11,<3.13"
dependencies = [
    "pandas>=2.2.0",
    "numpy>=1.26.3",
    "scikit-learn>=1.4.0",
    "matplotlib>=3.8.2",
    "seaborn>=0.13.1",
    "plotly>=5.18.0",
    "yfinance>=0.2.35",
    "ta>=0.11.0",
    "scipy>=1.12.0",
    "statsmodels>=0.14.1",
    "scikit-plot>=0.3.7",
    "jupyter>=1.0.0",
    "notebook>=7.0.7",
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "joblib>=1.3.2",
    "hmmlearn>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-xdist>=3.3.1",
    "pytest-html>=4.1.1",
    "pytest-benchmark>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]

notebook = [
    "jupyter>=1.0.0",
    "notebook>=7.0.7",
    "ipywidgets>=8.0.0",
]

[project.scripts]
crypto-analysis = "src.main:main"

[project.urls]
Homepage = "https://github.com/eemmuh/crypto-pattern-analysis"
Documentation = "https://github.com/eemmuh/crypto-pattern-analysis/blob/main/README.md"
Repository = "https://github.com/eemmuh/crypto-pattern-analysis"
Issues = "https://github.com/eemmuh/crypto-pattern-analysis/issues"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
    "performance: marks tests as performance tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
